src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Bill_to__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference billing account</description>
        <inlineHelpText>If this field is empty is filled automatically with the opportunity commercial account</inlineHelpText>
        <label>Bill to</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>Bill to can be the commercial account or an account child of commercial account or the contractor account of the opportunity</errorMessage>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Partner__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Bill to)</relationshipLabel>
        <relationshipName>Opportunity_Bill_to</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billin_Plan_Status__c</fullName>
        <label>Billing Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <label>Not Completed</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_item_not_to_be_invoiced__c</fullName>
        <label>Billing item not to be invoiced</label>
        <summarizedField>Billing_Item__c.Billing_amount__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Item__c.Billing_status__c</field>
            <operation>equals</operation>
            <value>Not to be invoiced</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_item_total_amount__c</fullName>
        <description>Totale dell&apos;amount degli item di fatturazione dell&apos;opportunity</description>
        <label>Billing item total amount</label>
        <summarizedField>Billing_Item__c.Billing_amount__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Item__c.Billing_status__c</field>
            <operation>notEqual</operation>
            <value>Not to be invoiced</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_item_total_expenses_invoiced__c</fullName>
        <description>Totale degli amount out of pocket expenses degli elementi di fatturazione fatturati</description>
        <label>Billing item total expenses invoiced</label>
        <summarizedField>Billing_Item__c.Out_of_pocket_amount__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Item__c.Billing_status__c</field>
            <operation>equals</operation>
            <value>Invoiced</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_item_total_invoiced__c</fullName>
        <description>Totale dell&apos;amount fatturato degli item di fatturazione dell&apos;opportunity</description>
        <label>Billing item total invoiced</label>
        <summarizedField>Billing_Item__c.Billing_amount__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Item__c.Billing_status__c</field>
            <operation>equals</operation>
            <value>Invoiced</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_items__c</fullName>
        <description>Number of billing items created for the opportunity</description>
        <label>Billing items</label>
        <summaryForeignKey>Billing_Item__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Develoment_Amount__c</fullName>
        <label>Estimated BD Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_Month_Number__c</fullName>
        <formula>MONTH( CloseDate )</formula>
        <label>Closed Month Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Opportunity code</description>
        <inlineHelpText>Automatically filled</inlineHelpText>
        <label>Opportunity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Fornitore__c</fullName>
        <label>Codice Fornitore</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <description>Opportunity based on a competitive bid</description>
        <inlineHelpText>Insert here competitors name in case of competitive bid</inlineHelpText>
        <label>Competition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account&apos;s contact for this opportunity</description>
        <inlineHelpText>Account&apos;s contact for this opportunity</inlineHelpText>
        <label>Account Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Resale</fullName>
                </value>
                <value>
                    <fullName>System Integration</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Month_Number__c</fullName>
        <formula>MONTH( datevalue(CreatedDate ))</formula>
        <label>Created Month Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elapsed__c</fullName>
        <label>Elapsed (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Forfait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Margin__c</fullName>
        <description>Expected margin (%)</description>
        <formula>1-Revenue__c / Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Margin_included_BD_cost__c</fullName>
        <formula>(Amount - Revenue__c - Total_costs__c)/Amount</formula>
        <label>Expected Margin (included Actual BDCost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_fulfillment_date__c</fullName>
        <description>Project Start date + elapsed months</description>
        <formula>ADDMONTHS(Start_date__c, Elapsed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected fulfillment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Cost_Charges_Period__c</fullName>
        <label>Last Cost Charges Period</label>
        <summarizedField>BD_Cost_Charge__c.Scope_date__c</summarizedField>
        <summaryForeignKey>BD_Cost_Charge__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>CDG</fullName>
                </value>
                <value>
                    <fullName>Area SAP</fullName>
                    <label>ERP</label>
                </value>
                <value>
                    <fullName>SCP</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                    <isActive>false</isActive>
                    <label>AMS (NON USARE)</label>
                </value>
                <value>
                    <fullName>Advanced Analytics</fullName>
                    <isActive>false</isActive>
                    <label>Advanced Analytics</label>
                </value>
                <value>
                    <fullName>Digital Transformation</fullName>
                    <isActive>false</isActive>
                    <label>Digital Transformation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Insourcing</fullName>
                </value>
                <value>
                    <fullName>Not Done/No Decision</fullName>
                </value>
                <value>
                    <fullName>No resources</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Duplicated</fullName>
                    <label>Duplicated / Wrong Creation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numeratore_Appoggio__c</fullName>
        <label>Numeratore Appoggio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <label>Offering</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SUB_LOB__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project/Program management​</fullName>
                </value>
                <value>
                    <fullName>Operations Governance​</fullName>
                </value>
                <value>
                    <fullName>Business Transformation​</fullName>
                </value>
                <value>
                    <fullName>F&amp;PM​</fullName>
                </value>
                <value>
                    <fullName>ESG​</fullName>
                </value>
                <value>
                    <fullName>Operational Improvement​</fullName>
                </value>
                <value>
                    <fullName>IT Strategy​</fullName>
                </value>
                <value>
                    <fullName>Digital CRM Strategy​​</fullName>
                </value>
                <value>
                    <fullName>Analytics &amp; Reporting​​</fullName>
                </value>
                <value>
                    <fullName>Activation Strategy</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>SCP</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>AMS (NON USARE)</fullName>
                    <isActive>false</isActive>
                    <label>AMS (NON USARE)</label>
                </value>
                <value>
                    <fullName>CDG</fullName>
                    <isActive>false</isActive>
                    <label>CDG</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Opportunity open date</description>
        <label>Open date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_amount_expenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order amount expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_Quality_manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Quality manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Manager__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_Manager__c</referenceTo>
        <relationshipLabel>Opportunities - PM Quality manager</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity padre</description>
        <label>Parent Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Child Opportunities</relationshipLabel>
        <relationshipName>Related_opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Edit Partner Contractor field when opportunity is contractually managed by a Partner company</inlineHelpText>
        <label>Contractor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected account must be a partner company</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities as Contractual Partner</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <inlineHelpText>Termini di pagamento automaticamente riportati dall&apos;account.</inlineHelpText>
        <label>Termini di pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>000DFFM</fullName>
                    <label>DATA FATTURA FINE MESE​</label>
                </value>
                <value>
                    <fullName>000DINR</fullName>
                    <label>DATE INVOICE RECEIPT​</label>
                </value>
                <value>
                    <fullName>15 GG DATA FATTURA</fullName>
                </value>
                <value>
                    <fullName>15 DAYS INVOICE DATE​</fullName>
                </value>
                <value>
                    <fullName>030DF-IT</fullName>
                    <label>30 GG DATA FATTURA ​</label>
                </value>
                <value>
                    <fullName>030DF-EN</fullName>
                    <label>30 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>030DFFM</fullName>
                    <label>30 GG DATA FATTURA FINE MESE</label>
                </value>
                <value>
                    <fullName>030FM-EN</fullName>
                    <label>30 DAYS END OF MONTH​</label>
                </value>
                <value>
                    <fullName>045DF</fullName>
                    <label>45 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>045DF-EN</fullName>
                    <label>45 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>045FDDF</fullName>
                    <label>45 GG DATA FATTURA FINE MESE</label>
                </value>
                <value>
                    <fullName>045FDDF-EN</fullName>
                    <label>45 DAYS INVOICE DATE END OF MONTH</label>
                </value>
                <value>
                    <fullName>060DF</fullName>
                    <label>60 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>060DF-EN</fullName>
                    <label>60 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>060DFFM</fullName>
                    <label>60 GG DATA FATTURA FINE MESE​</label>
                </value>
                <value>
                    <fullName>060DFFM-EN</fullName>
                    <label>60 DAYS INVOICE DATE END OF MONTH​</label>
                </value>
                <value>
                    <fullName>075</fullName>
                    <label>75 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>075-EN</fullName>
                    <label>75 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>090df</fullName>
                    <label>90 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>090df-EN</fullName>
                    <label>90 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>090DFFM</fullName>
                    <label>90 GG DATA FATTURA FINE MESE​</label>
                </value>
                <value>
                    <fullName>090FM-EN</fullName>
                    <label>90 DAYS END OF MONTH​</label>
                </value>
                <value>
                    <fullName>120DFFM</fullName>
                    <label>120 GG DATA FATTURA FINE MESE</label>
                </value>
                <value>
                    <fullName>120DFFM-EN</fullName>
                    <label>120 DAYS INVOICE DATE END OF MONTH</label>
                </value>
                <value>
                    <fullName>270DFFM</fullName>
                    <label>270 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>270DFFM-EN</fullName>
                    <label>270 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>COMP</fullName>
                    <label>In compensazione con fattura stornata​</label>
                </value>
                <value>
                    <fullName>COMPENG</fullName>
                    <label>To be compensated with reversed invoice ​</label>
                </value>
                <value>
                    <fullName>105DF</fullName>
                    <label>105 GG DATA FATTURA</label>
                </value>
                <value>
                    <fullName>0 DF</fullName>
                    <isActive>false</isActive>
                    <label>0 DF</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Offering__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adobe Analytics</fullName>
                    <label>Adobe</label>
                </value>
                <value>
                    <fullName>Board</fullName>
                </value>
                <value>
                    <fullName>Easy Fattura</fullName>
                </value>
                <value>
                    <fullName>Google Analytics</fullName>
                    <label>Google</label>
                </value>
                <value>
                    <fullName>HFM - Conso</fullName>
                </value>
                <value>
                    <fullName>IBP</fullName>
                </value>
                <value>
                    <fullName>JDA</fullName>
                </value>
                <value>
                    <fullName>Kinaxis</fullName>
                </value>
                <value>
                    <fullName>Neptune</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>SAP Business Objects</fullName>
                </value>
                <value>
                    <fullName>SAP Business One</fullName>
                </value>
                <value>
                    <fullName>SAP ECC</fullName>
                </value>
                <value>
                    <fullName>SAP RISE S/4 HANA PUBLIC</fullName>
                </value>
                <value>
                    <fullName>SAP S/4 HANA OnPrem/Private</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <label>NA/Unknown/Other/Varie</label>
                </value>
                <value>
                    <fullName>Data Studio</fullName>
                    <isActive>false</isActive>
                    <label>Data Studio</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Power BI</fullName>
                    <isActive>false</isActive>
                    <label>Power BI</label>
                </value>
                <value>
                    <fullName>Qlik Sense</fullName>
                    <isActive>false</isActive>
                    <label>Qlik Sense</label>
                </value>
                <value>
                    <fullName>SAP GROW S4HANA Cloud public edition</fullName>
                    <isActive>false</isActive>
                    <label>SAP GROW S4HANA Cloud public edition</label>
                </value>
                <value>
                    <fullName>SAP S4HANA OnPremise/RISE Cloud private edition</fullName>
                    <isActive>false</isActive>
                    <label>SAP S4HANA OnPremise/RISE Cloud private edition</label>
                </value>
                <value>
                    <fullName>Tableau</fullName>
                    <isActive>false</isActive>
                    <label>Tableau</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Varie</fullName>
                    <isActive>false</isActive>
                    <label>Varie</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Opportunity PM</description>
        <inlineHelpText>Opportunity PM</inlineHelpText>
        <label>Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Manager__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_Manager__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Fulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_closed_date__c</fullName>
        <label>Fulfillment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quality_review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to define if the opportunity needs to be reviewed by quality manager</description>
        <inlineHelpText>Criteri da utilizzare e importi:
 
1) Cliente Nuovo valore &gt; 50.000 Euro
2) Forfait: valore &gt; 150.000 Euro
3) T&amp;M: valore &gt; 300.000 Euro/anno
4) AMS SLA: valore &gt; 100.000 Euro/anno
5) AMS T&amp;M:  valore &gt; 200.000 Euro/anno
6) Nuova «Tecnologia»: valore &gt;  50.000 Euro</inlineHelpText>
        <label>Quality review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_review_status__c</fullName>
        <description>Quality review status for the opportunity</description>
        <label>Quality review status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To be completed</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Relevant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residual_Capacity_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residual Capacity Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>Opportunity cost</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDI_inserito__c</fullName>
        <formula>IF(NOT(ISBLANK( Account.Codice_SDI__c )), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDI inserito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUB_LOB__c</fullName>
        <label>SUB-LOB</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Line_of_Business__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>MGNT Consulting</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>SCP</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>AMS (NON USARE)</fullName>
                    <isActive>false</isActive>
                    <label>AMS (NON USARE)</label>
                </value>
                <value>
                    <fullName>CDG</fullName>
                    <isActive>false</isActive>
                    <label>CDG</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SendNewTRProject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendNewTRProject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff_costs__c</fullName>
        <label>Staff Actual costs</label>
        <summarizedField>BD_Cost_Charge__c.Staff_Cost__c</summarizedField>
        <summaryForeignKey>BD_Cost_Charge__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <description>Data inizio lavori</description>
        <label>Project Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subco__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subco</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR_Project_ID__c</fullName>
        <label>TR Project ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_L__c</fullName>
        <label>T&amp;L</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not included - out of pocket</fullName>
                    <default>true</default>
                    <label>Not included - out of pocket</label>
                </value>
                <value>
                    <fullName>Not Included - forfait</fullName>
                </value>
                <value>
                    <fullName>Included - forfait</fullName>
                </value>
                <value>
                    <fullName>Not included - no refound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>